# knotty

./: .gitignore  pyproject.toml
client/: index.html  style.css
client/js/: config.js  interaction.js  main.js  rope.js  settings.js  settings_schema.js  ws.js
server/: config.py  main.py
server/api/: ws.py
server/simulation/: knot_detection.py  physics.py  rope.py  settings.py
tests/: test_physics.py  test_rope.py  test_settings.py
