[project]
name = "knotty"
version = "0.1.0"
description = ""
dependencies = ["fastapi>=0.135.1,<0.136", "uvicorn[standard]>=0.41.0,<0.42", "numpy>=2.4.3,<3"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".pixi",
    "venv",
    ".neptune",
]

line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["BLE", "D401"]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


